[gd_scene load_steps=20 format=3 uid="uid://c8x2k4j5nan3p"]

[ext_resource type="Script" uid="uid://briemfklglw3k" path="res://scripts/ui/factory_manager.gd" id="1"]
[ext_resource type="Theme" uid="uid://bo8g4sssf0ihw" path="res://themes/game_theme.tres" id="1_rymoh"]
[ext_resource type="PackedScene" uid="uid://c3dy7oq2tsbw" path="res://scenes/ui/inventory_panel.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b3c4d5e6f7g8h" path="res://scenes/ui/part_selector.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://v72fnyfeh3ul" path="res://assets/cracked_texture.png" id="3_2n4c4"]
[ext_resource type="PackedScene" uid="uid://ipjdvqjhnvk4" path="res://scenes/ui/dragon_tooltip.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://h454uf23q7dp" path="res://assets/ui/coins_icon.png" id="4_dn5bi"]
[ext_resource type="PackedScene" uid="uid://b2j8h5k7m4oap" path="res://scenes/ui/scientist_panel.tscn" id="4_prvw3"]
[ext_resource type="PackedScene" uid="uid://dad0e1f2g3h4i" path="res://scenes/ui/dragon_details_modal.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://u0hpqv4jirlm" path="res://assets/ui/fire_icon.png" id="5_m5e4g"]
[ext_resource type="Texture2D" uid="uid://b0nabm5ivdud4" path="res://assets/ui/ice_icon.png" id="6_h7akn"]
[ext_resource type="FontFile" uid="uid://drcpudjaef4p8" path="res://assets/fonts/Walshes.otf" id="6_m5e4g"]
[ext_resource type="Texture2D" uid="uid://ca2ngrdmdqcqc" path="res://assets/ui/lightning_icon.png" id="7_7607m"]
[ext_resource type="Texture2D" uid="uid://qouho6qbi7m6" path="res://assets/ui/nature_icon.png" id="8_lkorh"]
[ext_resource type="Texture2D" uid="uid://dkgc8dlolhupl" path="res://assets/ui/shadow_icon.png" id="9_6vuwu"]
[ext_resource type="PackedScene" uid="uid://c3lam6n8p2q4r" path="res://scenes/ui/scientist_hire_modal.tscn" id="9_atd5s"]
[ext_resource type="PackedScene" uid="uid://d4f6lan2p8r1q" path="res://scenes/ui/dragon_grounds_modal.tscn" id="10_drgn_grnds"]
[ext_resource type="PackedScene" uid="uid://cbxvgj8k5mamn" path="res://scenes/ui/pet/gift_notification_popup.tscn" id="11_gift_popup"]
[ext_resource type="PackedScene" uid="uid://c4v8yxm2q5n7p" path="res://scenes/ui/save_exit_popup.tscn" id="12_save_exit"]

[node name="FactoryManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rymoh")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.05
anchor_right = 1.062
anchor_bottom = 1.0
offset_right = -0.36010742
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.1, 1)

[node name="CrackedTexture" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0807291, 1.0087891)
texture = ExtResource("3_2n4c4")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 4.0
offset_right = 3.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.7)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 2

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="GoldDisplay" type="PanelContainer" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(160, 65)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/MainVBox/TopBar/GoldDisplay"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/GoldDisplay/HBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture = ExtResource("4_dn5bi")
expand_mode = 1

[node name="GoldLabel" type="Label" parent="MarginContainer/MainVBox/TopBar/GoldDisplay/HBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "9023131233"

[node name="PartsDisplay" type="PanelContainer" parent="MarginContainer/MainVBox/TopBar"]
layout_mode = 2
size_flags_vertical = 0

[node name="PartsHBox" type="HBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="FireParts" type="VBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = -25
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/FireParts"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("5_m5e4g")
expand_mode = 4

[node name="Count" type="Label" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/FireParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="IceParts" type="VBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox"]
layout_mode = 2
theme_override_constants/separation = -25
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/IceParts"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("6_h7akn")
expand_mode = 4

[node name="Count" type="Label" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/IceParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LightningParts" type="VBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox"]
layout_mode = 2
theme_override_constants/separation = -25
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/LightningParts"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("7_7607m")
expand_mode = 4

[node name="Count" type="Label" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/LightningParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NatureParts" type="VBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox"]
layout_mode = 2
theme_override_constants/separation = -25
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/NatureParts"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("8_lkorh")
expand_mode = 4

[node name="Count" type="Label" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/NatureParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShadowParts" type="VBoxContainer" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox"]
layout_mode = 2
theme_override_constants/separation = -25
alignment = 1

[node name="Icon" type="TextureRect" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/ShadowParts"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("9_6vuwu")
expand_mode = 4

[node name="Count" type="Label" parent="MarginContainer/MainVBox/TopBar/PartsDisplay/PartsHBox/ShadowParts"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_m5e4g")
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MainVBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewInventoryButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "VIEW VAULT"

[node name="ViewFreezerButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "❄️ FREEZER"

[node name="ManageDefensesButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "MANAGE DEFENSES"

[node name="ManageTrainingButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "TRAINING GROUNDS"

[node name="ExplorationMapButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "EXPLORATION MAP"

[node name="ManageScientistsButton" type="Button" parent="MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "MANAGE SCIENTISTS"

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="LeftPanel" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ScientistsVBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "SCIENTISTS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScientistsList" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="StitcherPanel" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox/ScrollContainer/ScientistsList" instance=ExtResource("4_prvw3")]
unique_name_in_owner = true
layout_mode = 2

[node name="CaretakerPanel" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox/ScrollContainer/ScientistsList" instance=ExtResource("4_prvw3")]
unique_name_in_owner = true
layout_mode = 2
scientist_type = 1

[node name="TrainerPanel" parent="MarginContainer/MainVBox/MainContent/LeftPanel/ScientistsVBox/ScrollContainer/ScientistsList" instance=ExtResource("4_prvw3")]
unique_name_in_owner = true
layout_mode = 2
scientist_type = 2

[node name="CenterPanel" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreationVBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "DRAGON CREATION"
horizontal_alignment = 1

[node name="HeadSlot" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/HeadSlot"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/HeadSlot/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Head"
horizontal_alignment = 1

[node name="SlotRect" type="ColorRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/HeadSlot/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.25, 0.2, 1)

[node name="PartIcon" type="TextureRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/HeadSlot/VBox/SlotRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PartLabel" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/HeadSlot/VBox/SlotRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Empty"

[node name="BodySlot" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/BodySlot"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/BodySlot/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Body"
horizontal_alignment = 1

[node name="SlotRect" type="ColorRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/BodySlot/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2509804, 0.2, 1)

[node name="PartIcon" type="TextureRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/BodySlot/VBox/SlotRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PartLabel" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/BodySlot/VBox/SlotRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Empty"

[node name="TailSlot" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/TailSlot"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/TailSlot/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Tail"
horizontal_alignment = 1

[node name="SlotRect" type="ColorRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/TailSlot/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.25, 0.2, 1)

[node name="PartIcon" type="TextureRect" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/TailSlot/VBox/SlotRect"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PartLabel" type="Label" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox/TailSlot/VBox/SlotRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "Empty"

[node name="AnimateButton" type="Button" parent="MarginContainer/MainVBox/MainContent/CenterPanel/CreationVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "ANIMATE NEW DRAGON"

[node name="RightPanel" type="PanelContainer" parent="MarginContainer/MainVBox/MainContent"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="DragonsVBox" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/MainVBox/MainContent/RightPanel/DragonsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "DRAGONS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainVBox/MainContent/RightPanel/DragonsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DragonsList" type="VBoxContainer" parent="MarginContainer/MainVBox/MainContent/RightPanel/DragonsVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="DragonGroundsButton" type="Button" parent="MarginContainer/MainVBox/MainContent/RightPanel/DragonsVBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "DRAGON GROUNDS"

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/MainVBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="DefensePanel" type="PanelContainer" parent="MarginContainer/MainVBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/BottomBar/DefensePanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "DEFENSE"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WaveLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Wave: 1"

[node name="TimerLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Next: 5:00"
horizontal_alignment = 1

[node name="DefendersLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Defenders: 0/3"
horizontal_alignment = 1

[node name="BattleNotificationPanel" type="PanelContainer" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="BattleNotificationVBox" type="VBoxContainer" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox/BattleNotificationPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BattleLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox/BattleNotificationPanel/BattleNotificationVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "⚔ BATTLE STARTING ⚔"
horizontal_alignment = 1

[node name="WatchBattleButton" type="Button" parent="MarginContainer/MainVBox/BottomBar/DefensePanel/VBox/BattleNotificationPanel/BattleNotificationVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "WATCH BATTLE"

[node name="ExplorationPanel" type="PanelContainer" parent="MarginContainer/MainVBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/BottomBar/ExplorationPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/MainVBox/BottomBar/ExplorationPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "EXPLORATION"
horizontal_alignment = 1

[node name="ActiveLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/ExplorationPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Active: 0"
horizontal_alignment = 1

[node name="CollectionPanel" type="PanelContainer" parent="MarginContainer/MainVBox/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainVBox/BottomBar/CollectionPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/MainVBox/BottomBar/CollectionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "COLLECTION"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="MarginContainer/MainVBox/BottomBar/CollectionPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "0/125"
horizontal_alignment = 1

[node name="ViewButton" type="Button" parent="MarginContainer/MainVBox/BottomBar/CollectionPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "View Collection"

[node name="InventoryPanel" parent="." instance=ExtResource("2")]
layout_mode = 1

[node name="PartSelector" parent="." instance=ExtResource("3")]
layout_mode = 1

[node name="DragonTooltip" parent="." instance=ExtResource("4")]
layout_mode = 0

[node name="DragonDetailsModal" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1

[node name="ScientistHireModal" parent="." instance=ExtResource("9_atd5s")]
unique_name_in_owner = true
visible = false

[node name="DragonGroundsModal" parent="." instance=ExtResource("10_drgn_grnds")]
visible = false
layout_mode = 1

[node name="GiftNotificationPopup" parent="." instance=ExtResource("11_gift_popup")]
layout_mode = 1

[node name="SaveExitPopup" parent="." instance=ExtResource("12_save_exit")]
layout_mode = 1
